<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MM Tip Calculator</string>
    <string name="label_amount">Bill Amount</string>
    <string name="label_percent">Percent</string>
    <string name="display_percent">0%</string>
    <string name="label_tip">Tip</string>
    <string name="display_tip">$0.00</string>
    <string name="label_total">Total</string>
    <string name="display_total">$0.00</string>
    <string name="label_split">Split Bill?</string>
    <string name="label_per_person">Per Person</string>
    <string name="display_per_person">$0.00</string>
    
    

</resources>
